cmake_minimum_required(VERSION 2.8 )

project(class)
find_package(PCL REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
include_directories(
    /usr/include/python3.8
)
#include_directories(/home/slishy/Code/class/lib)
add_library(CollisionDetection SHARED CollisionDetection.cpp)
add_library(computeangle SHARED computeangle.cpp)
add_library(Computepointspose SHARED Computepointspose.cpp)
add_library(cylinderfitting SHARED cylinderfitting.cpp)
add_library(Planefitting SHARED Planefitting.cpp)
add_library(Pointviewer SHARED Pointviewer.cpp)
add_library(PointProcess SHARED PointProcess.cpp)
add_library(PointCloudAligment SHARED PointCloudAligment.cpp)
add_library(Linefitting SHARED Linefitting.cpp)

#add_executable(viewerICP /home/slishy/Code/class/lib/viewerICP.cpp)
set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}" ${CMAKE_MODULE_PATH})
link_directories(${CMAKE_SOURCE_DIR})
add_executable(3SVIZxizang 3SVIZxizang.cpp)
target_link_libraries(3SVIZxizang ${CMAKE_SOURCE_DIR}/build/libPlanefitting.so)
target_link_libraries(3SVIZxizang ${CMAKE_SOURCE_DIR}/build/libComputepointspose.so)
target_link_libraries(3SVIZxizang ${CMAKE_SOURCE_DIR}/build/libcomputeangle.so)
target_link_libraries(3SVIZxizang ${CMAKE_SOURCE_DIR}/build/libCollisionDetection.so)
target_link_libraries(3SVIZxizang ${CMAKE_SOURCE_DIR}/build/libPointviewer.so)
target_link_libraries(3SVIZxizang ${CMAKE_SOURCE_DIR}/build/libcylinderfitting.so)
target_link_libraries(3SVIZxizang ${CMAKE_SOURCE_DIR}/build/libPointProcess.so)
target_link_libraries(3SVIZxizang ${CMAKE_SOURCE_DIR}/build/libLinefitting.so)
target_link_libraries(3SVIZxizang ${CMAKE_SOURCE_DIR}/build/libPointCloudAligment.so  /usr/lib/x86_64-linux-gnu/libpython3.8.so)
target_link_libraries(3SVIZxizang ${PCL_LIBRARIES} ${OpenCV_LIBS}  /usr/lib/x86_64-linux-gnu/libopencv_highgui.so)